--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   permission_handler: ^10.0.0
   sentry_flutter: ^6.6.3
   shared_preferences: ^2.0.15
-  sqflite: ^2.0.2+1
+  sqflite: ^2.0.3
   url_launcher: ^6.1.4
   uuid: ^3.0.6
   wc_form_validators: ^1.0.0
