--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   file_picker: ^4.6.1
   eva_icons_flutter: ^3.1.0
   flutter_spinkit: ^5.1.0
-  flutter_svg: ^1.1.0
+  flutter_svg: ^1.1.1+1
   flutter_tabler_icons: ^1.1.1
   google_sign_in: ^5.4.0
   intl: ^0.17.0
