--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
   workflow_call:
   workflow_dispatch:
+
+concurrency:
+  group: ${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   build:
     name: flutter build
