--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dev_dependencies:
   flutter_colorpicker: ^1.0.3
   fake_cloud_firestore: ^1.3.0
   firebase_storage_mocks: ^0.5.1
-  firebase_auth_mocks: ^0.8.4
+  firebase_auth_mocks: ^0.8.5+1
   google_sign_in_mocks: ^0.2.1
   mockito: ^5.2.0
 flutter:
