--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,9 @@ dependencies:
 
   animations: ^2.0.7
   avatar_glow: ^2.0.2
-  firebase_auth: ^3.9.0
-  firebase_core: ^1.22.0
-  cloud_firestore: ^3.4.8
+  firebase_auth: ^4.1.0
+  firebase_core: ^2.1.1
+  cloud_firestore: ^4.0.3
   encrypt: ^5.0.1
   material_design_icons_flutter: ^5.0.6996
   file_picker: ^5.2.2
@@ -52,9 +52,9 @@ dev_dependencies:
   flutter_native_splash: ^2.2.13
   flutter_launcher_icons: ^0.10.0
   flutter_colorpicker: ^1.0.3
-  fake_cloud_firestore: ^1.3.1
-  firebase_storage_mocks: ^0.5.1
-  firebase_auth_mocks: ^0.8.5+1
+  fake_cloud_firestore: ^2.0.1
+  firebase_storage_mocks: ^0.6.0+1
+  firebase_auth_mocks: ^0.9.0
   google_sign_in_mocks: ^0.2.1
   mockito: ^5.3.2
 flutter:
