--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,11 +8,12 @@ if (localPropertiesFile.exists()) {
     throw new FileNotFoundException("Cannot find local.properties")
 }
 
-def appcompat_version = "1.5.0"
+def appcompat_version = "1.5.1"
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
-    throw new FileNotFoundException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+    throw new FileNotFoundException("Flutter SDK not found. Define location with flutter." +
+            "sdk in the local.properties file.")
 }
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
@@ -72,7 +73,8 @@ android {
                 release {
                     keyAlias keystoreProperties['keyAlias']
                     keyPassword keystoreProperties['keyPassword']
-                    storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+                    storeFile keystoreProperties['storeFile'] ?
+                            file(keystoreProperties['storeFile']) : null
                     storePassword keystoreProperties['storePassword']
                 }
             } else {
